config file adjustments

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -5520,87 +5520,87 @@ anm_shots               		= wpn_hand_aksu_tact_shoot_3dss, wpn_aksu_tact_shoot
 ![wpn_akm_alfa]
 >scopes				= gee36
 lewd_lens_hide_enabled       = true
-lewd_lens_hide_bone          = lens
+lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
-
 ![wpn_akm_alfa_hud]
-        aim_hud_offset_rot               = -0.017574, -0.008376, 0
-        aim_hud_offset_rot_16x9          = -0.017574, -0.008376, 0
+anm_shots_aim	=	anm_idle_aim_akm_alpha, anm_shoot_aim_akm_alpha
+
 ![wpn_akm_alfa_acog]
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_akm_alfa_acog_hud]
-        aim_hud_offset_pos               = -0.074057, 0.02087, -0.115648
-        aim_hud_offset_pos_16x9          = -0.074057, 0.02087, -0.115648
-        aim_hud_offset_rot               = 0.001479, -0.012049, 0
-        aim_hud_offset_rot_16x9          = 0.001479, -0.012049, 0
+        aim_hud_offset_pos               = -0.003064, 0.008641, -0.010698
+        aim_hud_offset_pos_16x9          = -0.003064, 0.008641, -0.010698
+        aim_hud_offset_rot               = 0.033836, 0.014248, 0
+        aim_hud_offset_rot_16x9          = 0.033836, 0.014248, 0
 		
 ![wpn_akm_alfa_triji]
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_akm_alfa_triji_hud]
-        aim_hud_offset_alt_pos           = 0.002212, 0.039088, -0.06
-        aim_hud_offset_alt_pos_16x9      = 0.002212, 0.039088, -0.06
-        aim_hud_offset_alt_rot           = -0.017003, -0.049052, -0.78
-        aim_hud_offset_alt_rot_16x9      = -0.017003, -0.049052, -0.78
+        aim_hud_offset_alt_pos           = 0.047184, -0.006916, -0.015553
+        aim_hud_offset_alt_pos_16x9      = 0.047184, -0.006916, -0.015553
+        aim_hud_offset_alt_rot           = -8.7e-05, -0.036048, -0.45
+        aim_hud_offset_alt_rot_16x9      = -8.7e-05, -0.036048, -0.45
 		
-        aim_hud_offset_pos               = -0.074057, 0.02087, -0.115648
-        aim_hud_offset_pos_16x9          = -0.074057, 0.02087, -0.115648
-        aim_hud_offset_rot               = 0.001479, -0.012049, 0
-        aim_hud_offset_rot_16x9          = 0.001479, -0.012049, 0
+        aim_hud_offset_pos               = -0.003064, 0.008641, -0.010698
+        aim_hud_offset_pos_16x9          = -0.003064, 0.008641, -0.010698
+        aim_hud_offset_rot               = 0.033836, 0.014248, 0
+        aim_hud_offset_rot_16x9          = 0.033836, 0.014248, 0
 		
 ![wpn_akm_alfa_specter]
 zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_akm_alfa_specter_hud]
-        aim_hud_offset_alt_pos           = -0.074532, -0.008526, -0.120626
-        aim_hud_offset_alt_pos_16x9      = -0.074532, -0.008526, -0.120626
-        aim_hud_offset_alt_rot           = -0.001929, -0.007945, 0
-        aim_hud_offset_alt_rot_16x9      = -0.001929, -0.007945, 0
+        aim_hud_offset_alt_pos           = -0.002731, -0.020256, -0.017593
+        aim_hud_offset_alt_pos_16x9      = -0.002731, -0.020256, -0.017593
+        aim_hud_offset_alt_rot           = 0.030629, 0.018608, 0
+        aim_hud_offset_alt_rot_16x9      = 0.030629, 0.018608, 0
 		
-        aim_hud_offset_pos               = -0.073623, 0.018232, -0.11878
-        aim_hud_offset_pos_16x9          = -0.073623, 0.018232, -0.11878
-        aim_hud_offset_rot               = -0.004313, -0.012368, 0
-        aim_hud_offset_rot_16x9          = -0.004313, -0.012368, 0
+        aim_hud_offset_pos               = -0.002708, 0.006813, -0.013851
+        aim_hud_offset_pos_16x9          = -0.002708, 0.006813, -0.013851
+        aim_hud_offset_rot               = 0.027371, 0.014679, 0
+        aim_hud_offset_rot_16x9          = 0.027371, 0.014679, 0
 		
 ![wpn_akm_alfa_spec_alt]
 zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_akm_alfa_spec_alt_hud]
-        aim_hud_offset_pos               = -0.073623, 0.018232, -0.11878
-        aim_hud_offset_pos_16x9          = -0.073623, 0.018232, -0.11878
-        aim_hud_offset_rot               = -0.004313, -0.012368, 0
-        aim_hud_offset_rot_16x9          = -0.004313, -0.012368, 0
+        aim_hud_offset_pos               = -0.002708, 0.006813, -0.013851
+        aim_hud_offset_pos_16x9          = -0.002708, 0.006813, -0.013851
+        aim_hud_offset_rot               = 0.027371, 0.014679, 0
+        aim_hud_offset_rot_16x9          = 0.027371, 0.014679, 0
 		
-        aim_hud_offset_alt_pos           = 0.002212, 0.039088, -0.06
-        aim_hud_offset_alt_pos_16x9      = 0.002212, 0.039088, -0.06
-        aim_hud_offset_alt_rot           = -0.017003, -0.049052, -0.78
-        aim_hud_offset_alt_rot_16x9      = -0.017003, -0.049052, -0.78
+        aim_hud_offset_alt_pos           = 0.047184, -0.006916, -0.015553
+        aim_hud_offset_alt_pos_16x9      = 0.047184, -0.006916, -0.015553
+        aim_hud_offset_alt_rot           = -8.7e-05, -0.036048, -0.45
+        aim_hud_offset_alt_rot_16x9      = -8.7e-05, -0.036048, -0.45
 		
 ![wpn_akm_alfa_leupold]
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_akm_alfa_leupold_hud]
-        aim_hud_offset_pos               = -0.073808, 0.01707, -0.091115
-        aim_hud_offset_pos_16x9          = -0.073808, 0.01707, -0.091115
-        aim_hud_offset_rot               = -0.004539, -0.012396, 0
-        aim_hud_offset_rot_16x9          = -0.004539, -0.012396, 0
+        aim_hud_offset_pos               = -0.006323, 0.020213, 0.004304
+        aim_hud_offset_pos_16x9          = -0.006323, 0.020213, 0.004304
+        aim_hud_offset_rot               = 0.027318, 0.014744, 0
+        aim_hud_offset_rot_16x9          = 0.027318, 0.014744, 0
 		
 ![wpn_akm_alfa_mark8_rmr]
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_akm_alfa_mark8_rmr_hud]
-        aim_hud_offset_alt_pos           = 0.002212, 0.039088, -0.06
-        aim_hud_offset_alt_pos_16x9      = 0.002212, 0.039088, -0.06
-        aim_hud_offset_alt_rot           = -0.017003, -0.049052, -0.78
-        aim_hud_offset_alt_rot_16x9      = -0.017003, -0.049052, -0.78
-        aim_hud_offset_pos               = -0.073808, 0.01707, -0.091115
-        aim_hud_offset_pos_16x9          = -0.073808, 0.01707, -0.091115
-        aim_hud_offset_rot               = -0.004539, -0.012396, 0
-        aim_hud_offset_rot_16x9          = -0.004539, -0.012396, 0
+        aim_hud_offset_alt_pos           = 0.047184, -0.006916, -0.015553
+        aim_hud_offset_alt_pos_16x9      = 0.047184, -0.006916, -0.015553
+        aim_hud_offset_alt_rot           = -8.7e-05, -0.036048, -0.45
+        aim_hud_offset_alt_rot_16x9      = -8.7e-05, -0.036048, -0.45
+		
+        aim_hud_offset_pos               = -0.006323, 0.020213, 0.004304
+        aim_hud_offset_pos_16x9          = -0.006323, 0.020213, 0.004304
+        aim_hud_offset_rot               = 0.027318, 0.014744, 0
+        aim_hud_offset_rot_16x9          = 0.027318, 0.014744, 0
 		
 ![wpn_akm_alfa_pn23]
         scope_zoom_factor                = 20
@@ -5608,19 +5608,19 @@ zoom_step_count=1
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on
 ![wpn_akm_alfa_pn23_hud]
-        aim_hud_offset_pos               = -0.073719, 0.009249, -0.106337
-        aim_hud_offset_pos_16x9          = -0.073719, 0.009249, -0.106337
-        aim_hud_offset_rot               = -0.004303, -0.012591, 0
-        aim_hud_offset_rot_16x9          = -0.004303, -0.012591, 0
+        aim_hud_offset_pos               = -0.01417, 0.02248, -0.018661
+        aim_hud_offset_pos_16x9          = -0.01417, 0.02248, -0.018661
+        aim_hud_offset_rot               = 0.045937, 0.018336, 0
+        aim_hud_offset_rot_16x9          = 0.045937, 0.018336, 0
 		
 ![wpn_akm_alfa_gauss_sight]
         scope_zoom_factor                = 12
         scope_texture                    =
 ![wpn_akm_alfa_gauss_sight_hud]
-        aim_hud_offset_pos               = -0.073778, 0.021399, -0.135612
-        aim_hud_offset_pos_16x9          = -0.073778, 0.021399, -0.135612
-        aim_hud_offset_rot               = -0.00449, -0.012338, 0
-        aim_hud_offset_rot_16x9          = -0.00449, -0.012338, 0
+        aim_hud_offset_pos               = -0.006382, 0.024454, -0.041114
+        aim_hud_offset_pos_16x9          = -0.006382, 0.024454, -0.041114
+        aim_hud_offset_rot               = 0.027575, 0.014925, 0
+        aim_hud_offset_rot_16x9          = 0.027575, 0.014925, 0
 		
 ![wpn_akm_alfa_susat]
         scope_zoom_factor                = 30
