--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -935,24 +935,29 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = scope
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
-
+![wpn_vssk_hud]
+        aim_hud_offset_pos               = -0.068319, 0.015768, -0.093838
+        aim_hud_offset_pos_16x9          = -0.068319, 0.015768, -0.093838
+        aim_hud_offset_rot               = 0.003369, 0.002838, 0
+        aim_hud_offset_rot_16x9          = 0.003369, 0.002838, 0
+		
 ![wpn_vssk_cortex]		
         scope_zoom_factor                = 12
         scope_texture                    =
 ![wpn_vssk_cortex_hud]
-        aim_hud_offset_pos               = -0.094655, 0.003952, -0.053129
-        aim_hud_offset_pos_16x9          = -0.094655, 0.003952, -0.053129
-        aim_hud_offset_rot               = 0.038895, 0.032339, -0.024956
-        aim_hud_offset_rot_16x9          = 0.038895, 0.032339, -0.024956
+        aim_hud_offset_pos               = -0.067755, 0.005198, -0.056845
+        aim_hud_offset_pos_16x9          = -0.067755, 0.005198, -0.056845
+        aim_hud_offset_rot               = 0.006573, -0.000671, 0
+        aim_hud_offset_rot_16x9          = 0.006573, -0.000671, 0
 		
 ![wpn_vssk_acog]
         scope_zoom_factor                = 42.86
         scope_texture                    =			
 ![wpn_vssk_acog_hud]
-        aim_hud_offset_pos               = -0.094717, 0.016258, -0.096826
-        aim_hud_offset_pos_16x9          = -0.094717, 0.016258, -0.096826
-        aim_hud_offset_rot               = 0.044633, 0.032509, -0.030161
-        aim_hud_offset_rot_16x9          = 0.044633, 0.032509, -0.030161
+        aim_hud_offset_pos               = -0.067577, 0.017041, -0.102111
+        aim_hud_offset_pos_16x9          = -0.067577, 0.017041, -0.102111
+        aim_hud_offset_rot               = 0.013209, -0.001618, 0
+        aim_hud_offset_rot_16x9          = 0.013209, -0.001618, 0
 		
 ;----------------------------------------------------------------------------------------			
 [wpn_vssk_leupold]:wpn_vssk
@@ -971,10 +976,10 @@ scope_dynamic_zoom      = on
 
 [wpn_vssk_leupold_hud]:wpn_vssk_hud
 item_visual                              = anomaly_weapons\wpn_vssk\barry_vssk_leupold_hud.ogf
-        aim_hud_offset_pos               = -0.094571, 0.014347, -0.087315
-        aim_hud_offset_pos_16x9          = -0.094571, 0.014347, -0.087315
-        aim_hud_offset_rot               = 0.038908, 0.032185, -0.03
-        aim_hud_offset_rot_16x9          = 0.038908, 0.032185, -0.03
+        aim_hud_offset_pos               = -0.067622, 0.015301, -0.093221
+        aim_hud_offset_pos_16x9          = -0.067622, 0.015301, -0.093221
+        aim_hud_offset_rot               = 0.006541, -0.001227, 0
+        aim_hud_offset_rot_16x9          = 0.006541, -0.001227, 0
 		
 ;----------------------------------------------------------------------------------------			
 [wpn_vssk_marchf]:wpn_vssk
@@ -994,10 +999,10 @@ scope_dynamic_zoom      = on
 
 [wpn_vssk_marchf_hud]:wpn_vssk_hud
 item_visual                              = anomaly_weapons\wpn_vssk\barry_vssk_marchf_hud.ogf
-        aim_hud_offset_pos               = -0.0944, 0.013085, -0.093199
-        aim_hud_offset_pos_16x9          = -0.0944, 0.013085, -0.093199
-        aim_hud_offset_rot               = 0.038274, 0.032465, -0.026
-        aim_hud_offset_rot_16x9          = 0.038274, 0.032465, -0.026
+        aim_hud_offset_pos               = -0.067068, 0.014286, -0.098462
+        aim_hud_offset_pos_16x9          = -0.067068, 0.014286, -0.098462
+        aim_hud_offset_rot               = 0.005631, -0.00144, 0
+        aim_hud_offset_rot_16x9          = 0.005631, -0.00144, 0
 		
 ;----------------------------------------------------------------------------------------			
 [wpn_vssk_ps320]:wpn_vssk
@@ -1017,10 +1022,10 @@ scope_dynamic_zoom      = on
 
 [wpn_vssk_ps320_hud]:wpn_vssk_hud
 item_visual                              = anomaly_weapons\wpn_vssk\barry_vssk_ps320_hud.ogf
-        aim_hud_offset_pos               = -0.095314, 0.015977, -0.090287
-        aim_hud_offset_pos_16x9          = -0.095314, 0.015977, -0.090287
-        aim_hud_offset_rot               = 0.038183, 0.032234, -0.032
-        aim_hud_offset_rot_16x9          = 0.038183, 0.032234, -0.032
+        aim_hud_offset_pos               = -0.068432, 0.017055, -0.095277
+        aim_hud_offset_pos_16x9          = -0.068432, 0.017055, -0.095277
+        aim_hud_offset_rot               = 0.007501, -0.000832, 0
+        aim_hud_offset_rot_16x9          = 0.007501, -0.000832, 0
 		
 ;----------------------------------------------------------------------------------------			
 [wpn_vssk_razorhd]:wpn_vssk
@@ -1039,10 +1044,10 @@ scope_dynamic_zoom      = on
 
 [wpn_vssk_razorhd_hud]:wpn_vssk_hud
 item_visual                              = anomaly_weapons\wpn_vssk\barry_vssk_razor_hud.ogf
-        aim_hud_offset_pos               = -0.094623, 0.01406, -0.060274
-        aim_hud_offset_pos_16x9          = -0.094623, 0.01406, -0.060274
-        aim_hud_offset_rot               = 0.038891, 0.032673, -0.027
-        aim_hud_offset_rot_16x9          = 0.038891, 0.032673, -0.027
+        aim_hud_offset_pos               = -0.067537, 0.01509, -0.064187
+        aim_hud_offset_pos_16x9          = -0.067537, 0.01509, -0.064187
+        aim_hud_offset_rot               = 0.006629, -0.00072, 0
+        aim_hud_offset_rot_16x9          = 0.006629, -0.00072, 0
 		
 ;----------------------------------------------------------------------------------------			
 [wpn_vssk_ado]:wpn_vssk
