add vulcan to early traders

--- a/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/nato_new_sights_preset.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/nato_new_sights_preset.ltx
@@ -13,6 +13,7 @@ uh2							= 1, 1
 lco1						= 1, 1
 monstrum					= 1, 1
 trihawk						= 1, 1
+vulcan						= 1, 1
 
 ![supplies_4]
 bravo4						= 1, 1
