--- a/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/wp_new_sights_preset.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/wp_new_sights_preset.ltx
@@ -9,6 +9,7 @@ gee36							= 1, 1
 pk6								= 1, 1
 p1x42							= 1, 1
 1p87 							= 1, 1
+vulcan							= 1, 1
 
 ![supplies_4]
 ps320							= 1, 0.75
