--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs.ltx
@@ -616,27 +616,43 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_ump45_acog_sk1_hud]
-        aim_hud_offset_pos               = -0.053054, 0.008306, -0.110069
-        aim_hud_offset_pos_16x9          = -0.053054, 0.008306, -0.110069
-        aim_hud_offset_rot               = 0.010257, -0.003306, 0
-        aim_hud_offset_rot_16x9          = 0.010257, -0.003306, 0
+        aim_hud_offset_pos               = -0.052921, 0.004519, -0.128804
+        aim_hud_offset_pos_16x9          = -0.052921, 0.004519, -0.128804
+        aim_hud_offset_rot               = 0.016022, -0.003755, 0
+        aim_hud_offset_rot_16x9          = 0.016022, -0.003755, 0
 		
 ![wpn_ump45_custom_specter]
 zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
-		scope_dynamic_zoom               = on		
+		scope_dynamic_zoom               = on	
+		use_alt_aim_hud					 = true
 ![wpn_ump45_custom_specter_hud]
-        aim_hud_offset_alt_pos           = -0.052984, -0.023666, -0.10368
-        aim_hud_offset_alt_pos_16x9      = -0.052984, -0.023666, -0.10368
-        aim_hud_offset_alt_rot           = 0.00701, 0.000303, 0
-        aim_hud_offset_alt_rot_16x9      = 0.00701, 0.000303, 0
+        aim_hud_offset_alt_pos           = -0.053096, -0.027865, -0.10368
+        aim_hud_offset_alt_pos_16x9      = -0.053096, -0.027865, -0.10368
+        aim_hud_offset_alt_rot           = 0.011128, 0.000569, 0
+        aim_hud_offset_alt_rot_16x9      = 0.011128, 0.000569, 0
 		
-        aim_hud_offset_pos               = -0.052218, 0.00376, -0.10368
-        aim_hud_offset_pos_16x9          = -0.052218, 0.00376, -0.10368
-        aim_hud_offset_rot               = 0.00415, -0.003711, 0
-        aim_hud_offset_rot_16x9          = 0.00415, -0.003711, 0	
+        aim_hud_offset_pos               = -0.052168, -0.00013, -0.122873
+        aim_hud_offset_pos_16x9          = -0.052168, -0.00013, -0.122873
+        aim_hud_offset_rot               = 0.00946, -0.003658, 0
+        aim_hud_offset_rot_16x9          = 0.00946, -0.003658, 0	
 
+![wpn_ump45_custom_susat]
+        scope_zoom_factor                = 30
+        scope_texture                    =	
+		use_alt_aim_hud					 = true		
+![wpn_ump45_custom_susat_hud]
+        aim_hud_offset_alt_pos           = -0.052999, -0.028869, -0.11552
+        aim_hud_offset_alt_pos_16x9      = -0.052999, -0.028869, -0.11552
+        aim_hud_offset_alt_rot           = 0.013678, 7.1e-05, -0.007881
+        aim_hud_offset_alt_rot_16x9      = 0.013678, 7.1e-05, -0.007881
+		
+        aim_hud_offset_pos               = -0.052021, -0.00984, -0.11552
+        aim_hud_offset_pos_16x9          = -0.052021, -0.00984, -0.11552
+        aim_hud_offset_rot               = 0.008331, -0.003461, 0
+        aim_hud_offset_rot_16x9          = 0.008331, -0.003461, 0
+		
 ;--------------------------------------------------------------------------------		
 [wpn_ump45_custom_monstrum]:wpn_ump45_custom
         hud                         = wpn_ump45_custom_monstrum_hud
@@ -652,10 +668,10 @@ zoom_step_count=1
 	
 [wpn_ump45_custom_monstrum_hud]:wpn_ump45_sk1_hud
 item_visual                              = anomaly_weapons\wpn_ump45\wpn_ump45_sk1_monstrum_hud.ogf
-        aim_hud_offset_pos               = -0.052168, 0.012116, -0.090313
-        aim_hud_offset_pos_16x9          = -0.052168, 0.012116, -0.090313
-        aim_hud_offset_rot               = 0.00365, -0.004033, 0
-        aim_hud_offset_rot_16x9          = 0.00365, -0.004033, 0
+        aim_hud_offset_pos               = -0.052218, 0.008332, -0.10837
+        aim_hud_offset_pos_16x9          = -0.052218, 0.008332, -0.10837
+        aim_hud_offset_rot               = 0.008844, -0.003783, 0
+        aim_hud_offset_rot_16x9          = 0.008844, -0.003783, 0
 		
 ;--------------------------------------------------------------------------------
 [wpn_ump45_custom_trihawk]:wpn_ump45_custom
@@ -672,10 +688,10 @@ item_visual                              = anomaly_weapons\wpn_ump45\wpn_ump45_s
 
 [wpn_ump45_custom_trihawk_hud]:wpn_ump45_sk1_hud
 item_visual                              = anomaly_weapons\wpn_ump45\wpn_ump45_sk1_trihawk_hud.ogf
-        aim_hud_offset_pos               = -0.05216, 0.001425, -0.056979
-        aim_hud_offset_pos_16x9          = -0.05216, 0.001425, -0.056979
-        aim_hud_offset_rot               = 0.004, -0.003554, 0
-        aim_hud_offset_rot_16x9          = 0.004, -0.003554, 0
+        aim_hud_offset_pos               = -0.052083, -0.002554, -0.07478
+        aim_hud_offset_pos_16x9          = -0.052083, -0.002554, -0.07478
+        aim_hud_offset_rot               = 0.008759, -0.00366, 0
+        aim_hud_offset_rot_16x9          = 0.008759, -0.00366, 0
 		
 ;--------------------------------------------------------------------------------
 [wpn_ump45_custom_vulcan]:wpn_ump45_custom
@@ -694,10 +710,10 @@ item_visual                              = anomaly_weapons\wpn_ump45\wpn_ump45_s
 	
 [wpn_ump45_custom_vulcan_hud]:wpn_ump45_sk1_hud
 item_visual                              = anomaly_weapons\wpn_ump45\wpn_ump45_sk1_vulcan_hud.ogf
-        aim_hud_offset_pos               = -0.052554, 0.006656, -0.082496
-        aim_hud_offset_pos_16x9          = -0.052554, 0.006656, -0.082496
-        aim_hud_offset_rot               = 0.004417, -0.00328, 0
-        aim_hud_offset_rot_16x9          = 0.004417, -0.00328, 0
+        aim_hud_offset_pos               = -0.052447, 0.002788, -0.102631
+        aim_hud_offset_pos_16x9          = -0.052447, 0.002788, -0.102631
+        aim_hud_offset_rot               = 0.009859, -0.003313, 0
+        aim_hud_offset_rot_16x9          = 0.009859, -0.003313, 0
 			
 ;==============================================================================	
 ![wpn_p90gamma]
