remove marchf from some guns

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -372,6 +372,7 @@ item_visual                              = anomaly_weapons\wpn_ace52\wpn_ace52_g
 		
 ;==============================================================================		
 ![wpn_ak5c_bas]
+<scopes						 = marchf
 >scopes						 = t12
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -495,6 +496,7 @@ zoom_step_count=1
         aim_hud_offset_rot_16x9          = 0.016962, 0.020162, 0		
 ;==============================================================================	
 ![wpn_ak5c_isg]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -1024,6 +1026,7 @@ item_visual                              = dynamics\weapons\wpn_aug_a3_custom_ba
 ![wpn_aug_merc]
 parent_section				 = wpn_aug_merc
 >scopes						 = triji, spec_alt, mark8_rmr, gee36, gauss_sight
+<scopes						 = marchf
 
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -1572,6 +1575,7 @@ item_visual                              = dynamics\weapons\wpn_fal_sa58_osw\wpn
         aim_hud_offset_rot_16x9          = -0.003099, 0.010918, 0	
 ;==============================================================================
  ![wpn_fn2000_nimble]
+<scopes						 = marchf 
 >scopes						 = gauss_sight
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -2087,6 +2091,7 @@ scope_texture        =
         aim_hud_offset_rot_16x9          = 0.0225, 0.013859, 0
 ;==============================================================================	
 ![wpn_groza_nimble]
+<scopes						 = marchf
 >scopes						 = gauss_sight
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = scope1
@@ -2234,6 +2239,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.016189, 0.003447, 0
 ;==============================================================================		
 ![wpn_l85_m2]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -2535,6 +2541,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 ;==============================================================================		
 ![wpn_pkm_zenit_siber]
 !hud_fov
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -2612,7 +2619,8 @@ s3ds_exit_pupil		= 0.7
 		
 ;==============================================================================	
 ![wpn_scar_siber]
->scopes					= gee36
+<scopes						 = marchf
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -2769,7 +2777,7 @@ item_visual                              = dynamics\weapons\wpn_scar_siber\wpn_s
 ;==============================================================================	
 ![wpn_scar_siber_m1]
 >scopes						 = gee36
-
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -2917,8 +2925,8 @@ item_visual                              = dynamics\weapons\wpn_scar_siber_m1\wp
         aim_hud_offset_rot_16x9          = 0.001691, -0.003314, 0			
 ;==============================================================================	
 ![wpn_scar_siber_m2]
->scopes						= gee36
-
+>scopes						 = gee36
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -3544,6 +3552,7 @@ item_visual                              = anomaly_weapons\wpn_sig550\wpn_sig550
 ;==============================================================================	
 ![wpn_sig552]
 >scopes 			                         = leupold, marchf, pn23, specter, gauss_sight
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = scope1
 lewd_lens_hide_delays        = 0.1,0
@@ -4022,6 +4031,7 @@ item_visual                              = dynamics\weapons\wpn_aek971\wpn_aek97
 		
 ;==============================================================================		
 ![wpn_ak104_alfa]
+<scopes						 = marchf
 >scopes						 = gauss_sight
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -4158,7 +4168,8 @@ item_visual                              = dynamics\weapons\wpn_ak104_alfa\wpn_a
 		
 ;==============================================================================
 ![wpn_ak12_custom]
->scopes					= gee36
+<scopes						 = marchf
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -4330,7 +4341,8 @@ item_visual                              = dynamics\weapons\wpn_ak12_custom\wpn_
 		
 ;==============================================================================
 ![wpn_ak12_m1]
->scopes				= gee36
+<scopes						 = marchf
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -4472,6 +4484,7 @@ item_visual                              = dynamics\weapons\wpn_ak12_m1\wpn_ak12
 		
 ;==============================================================================
 ![wpn_ak74_isg]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
@@ -4628,7 +4641,8 @@ lewd_lens_hide_aim_mode      = true, false, false
 	
 ;==============================================================================	
 ![wpn_ak74_pmc]
->scopes 				                = pso1m21
+<scopes						 = marchf
+>scopes 				     = pso1m21
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -4859,7 +4873,8 @@ zoom_step_count=1
 
 ;==============================================================================
 ![wpn_ak74m_beard]
->scopes 					     = pso1m21
+<scopes						 = marchf
+>scopes 					 = pso1m21
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -5004,7 +5019,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 		
 ;==============================================================================
 ![wpn_ak74m_n]
->scopes                                   = pso1m21
+>scopes                      = pso1m21
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -5081,6 +5096,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 
 ;==============================================================================	
 ![wpn_ak74u_isg]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -5206,6 +5222,7 @@ zoom_step_count=1
         aim_hud_offset_rot_16x9          = -0.00455, -0.01189, 0.000959
 ;==============================================================================
 ![wpn_ak74u_m1_isg]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -5322,7 +5339,7 @@ zoom_step_count=1
         aim_hud_offset_rot_16x9          = 0.016231, 0.008804, 0.000959
 ;==============================================================================
 ![wpn_ak74u_n1]
->scopes                                   = pso1m21
+>scopes                      = pso1m21
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -5518,7 +5535,8 @@ anm_shots               		= wpn_hand_aksu_tact_shoot_3dss, wpn_aksu_tact_shoot
 	
 ;==============================================================================
 ![wpn_akm_alfa]
->scopes				= gee36
+<scopes						 = marchf
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
@@ -5672,6 +5690,7 @@ item_visual                              = dynamics\weapons\wpn_akm_alfa\wpn_akm
 		
 ;==============================================================================
 ![wpn_akm_isg]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -6398,7 +6417,7 @@ zoom_step_count=1
 		
 ;==============================================================================
 ![wpn_adar2_15]
-<scopes 			                         = triji, mark8_rmr, spec_alt
+<scopes 			         = triji, mark8_rmr, spec_alt
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
@@ -6458,7 +6477,8 @@ zoom_step_count=1
         aim_hud_offset_rot_16x9          = 0.014397, 0.005589, 0
 ;==============================================================================
 ![wpn_m4_butcher]
->scopes					= gee36
+<scopes						 = marchf
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -6568,7 +6588,8 @@ item_visual                              = dynamics\weapons\wpn_m4_butcher\wpn_m
         aim_hud_offset_rot_16x9          = 0.019112, 0.006682, 0			
 ;==============================================================================
 ![wpn_m4_ru556]
->scopes					= gee36
+<scopes						 = marchf
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -6710,7 +6731,7 @@ item_visual                              = dynamics\weapons\wpn_ru556\wpn_ru556_
         aim_hud_offset_rot_16x9          = 0.007605, 0.001482, 0			
 ;==============================================================================
 ![wpn_m4_tac]
->scopes					= gee36
+>scopes						 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
@@ -6866,6 +6887,7 @@ item_visual                              = dynamics\weapons\wpn_m4_tac\wpn_m4_ta
 
 ;==============================================================================
 ![wpn_m4a1_siber]
+<scopes						 = marchf
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -6994,7 +7016,7 @@ zoom_step_count=1
 ;==============================================================================
 ![wpn_brn180]
 !hud_fov
->scopes			= gee36
+>scopes					 	 = gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
@@ -7303,6 +7325,7 @@ item_visual				= dynamics\weapons\wpn_dtmdr_black\wpn_dtmdr_gauss_hud.ogf
 		
 ;==============================================================================	
 ![wpn_dtmdr]
+<scopes						 = marchf
 >scopes                   	 = pn23, gee36, gauss_sight
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -7497,7 +7520,7 @@ zoom_step_count=1
         aim_hud_offset_rot_16x9          = 0.014563, 0.003519, -0.051
 ;==============================================================================
 ![wpn_rpk74]
->scopes                                   = ekp8_02, okp, pka, 1p63, 1p76, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs
+>scopes                      = ekp8_02, okp, pka, 1p63, 1p76, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
